# portforward

./: .gitignore  README.md  build-cli.sh  build-macos-gui.sh  build-macos.sh  build-windows-gui.bat  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yml
.omc/: project-memory.json
.omc/autopilot/: spec.md
.omc/sessions/: a80a623d-842c-4384-a5bd-8fedb3450d89.json
.omc/state/: agent-replay-1f941a78-a4d4-4528-ba60-009935270810.jsonl  agent-replay-2bcf38a5-b137-4f7d-a539-bc3654069f7f.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-10T10-29-43-882Z.json  checkpoint-2026-03-10T13-30-57-975Z.json  checkpoint-2026-03-11T15-46-28-609Z.json  checkpoint-2026-03-11T15-46-43-102Z.json
.omc/state/sessions/c914b6c4-9f33-4de9-b272-80bff59b6e6e/: autopilot-state.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  core.rs  gui.rs  lib.rs  main.rs
src-tauri/src/commands/: config_cmd.rs  mod.rs  stats_cmd.rs  tunnel_cmd.rs
src-tauri/src/config/: schema.rs
src-tauri/src/crypto/: aes_gcm.rs  auth.rs  mod.rs
src-tauri/src/forward/: local2remote.rs  mod.rs  remote2local.rs  socks5.rs
src-tauri/src/protocol/: codec.rs  frame.rs  mod.rs
src-tauri/src/stats/: counter.rs
src-tauri/src/tunnel/: client.rs  heartbeat.rs  mod.rs  server.rs  session.rs
src/assets/styles/: main.css
src/stores/: index.ts  servers.ts  stats.ts
src/types/: index.ts  server.ts  stats.ts
